--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.2.4.jar=libs/gson-2.2.4.jar
+file.reference.mongo-java-driver-2.11.2.jar=libs/mongo-java-driver-2.11.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +39,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
-    ${libs.jstl11.classpath}
+    ${libs.jstl11.classpath}:\
+    ${file.reference.gson-2.2.4.jar}:\
+    ${file.reference.mongo-java-driver-2.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
